refactor: add some semantic tags to rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 
 <body class="main-content">
-  <div class="about">
+  <header class="about">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
+  </header>
+  <main class="main">
     <p id="add-element">
       <label for="new-task">Add Item</label>
       <div class="task-wrapper">
@@ -46,7 +46,7 @@
         <button class="delete"><img src="./remove.svg"></button>
       </li>
     </ul>
-  </div>
+  </main>
 <script src="app.js"></script>
 </body>
 </html>
