--- a/index.html
+++ b/index.html
@@ -7,45 +7,50 @@
 </head>
 
 <body class="main-content">
-  <header class="about">
-    <img src="./eisenhower-matrix.jpg" alt="matrix">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <header class="about__content">
+    <img src="./eisenhower-matrix.jpg" class="about__img" alt="matrix">
+    <a class="about__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="main">
-    <p id="add-element">
+  <main class="main__content">
+    <p id="main__add-element">
       <label for="new-task">Add Item</label>
-      <div class="task-wrapper">
+      <div class="main__task-wrapper">
         <input id="new-task"class="task" type="text">
         <button>Add</button>
       </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incomplete-Tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="remove"></button>
-      </li>
-      <li class="edit-Mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg" alt="remove"></button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg" alt="remove"></button>
-      </li>
-    </ul>
+    <section class="incomplete">
+      <ul id="incomplete-Tasks">
+        <li class="incomplete__list">
+          <input type="checkbox">
+          <label class="task">Pay Bills</label>
+          <input type="text" class="task">
+          <button class="edit">Edit</button>
+          <button class="delete"><img src="./remove.svg" alt="remove"></button>
+        </li>
+        <li class="edit-Mode incomplete__list">
+          <input type="checkbox">
+          <label class="task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task">
+          <button class="edit">Save</button>
+          <button class="delete"><img src="./remove.svg" alt="remove"></button>
+        </li>
+      </ul>
+    </section>
+    <section class="completed">
+      <h3>Completed</h3>
+      <ul id="completed__completed-tasks">
+        <li>
+          <input type="checkbox" checked>
+          <label class="task">See the Doctor</label>
+          <input type="text" class="task">
+          <button class="edit">Edit</button>
+          <button class="delete"><img src="./remove.svg" alt="remove"></button>
+        </li>
+      </ul>
+    </section>
+    
   </main>
 <script src="app.js"></script>
 </body>
